--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -17,22 +17,20 @@
       <td>{{ user.name }}</td>
       <td>{{ user.email }}</td>
       <td>
-        <a [routerLink]="['/users', user.id]">
-          <i class="material-icons">mode_edit</i>
-        </a>
+        <button md-button color="primary" [routerLink]="['/users', user.id]">
+          <md-icon>edit</md-icon>
+        </button>
       </td>
       <td>
-        <a (click)="deleteUser(user)" href="">
-          <i class="material-icons">delete</i>
-        </a>
+        <button md-button color="warn" (click)="deleteUser(user)">
+          <md-icon>delete</md-icon>
+        </button>
       </td>
     </tr>
   </tbody>
 </table>
 
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-  <a class="btn-floating btn-large waves-effect waves-light green"
-     routerLink="/users/new">
-    <i class="material-icons">add</i>
-  </a>
+  <button routerLink="/users/new" md-fab><md-icon class="white-text">add</md-icon></button>
+  
 </div>
